# query-alerts

./: .env.sample  .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
app/: Cargo.toml
app/src/: init.rs  main.rs
lib/: Cargo.toml
lib/benches/: my_benchmark.rs
lib/src/: algorithms.rs  data_providers.rs  dtos.rs  entities.rs  etc.rs  lib.rs  matching.rs  query.rs
lib/src/algorithms/: common.rs  use_case_insensitive_algorithm.rs  use_regex_algorithm.rs  with_regex.rs
lib/src/data_providers/: get_alerts.rs  get_query_terms.rs
lib/src/dtos/: alert.rs  alert_content.rs  query_term.rs
lib/src/dtos/common/: parser.rs
lib/src/entities/: alert.rs  alert_content.rs  language.rs  query_term.rs
lib/src/etc/: paths.rs
lib/tests/: dto_to_entity.rs
